kubernetes/cluster/active/apps/floppy/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: floppy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted all-in-one media tracker.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sh-yamtrack.svg
    gethomepage.dev/name: Floppy
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=floppy"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "floppy.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: floppy-app
          namespace: floppy
          port: 8000
          weight: 1
      timeouts:
        request: 5m
      matches:
        - path:
            type: PathPrefix
            value: /
